--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.1",
     "geolib": "^2.0.24",
     "lodash": "^4.17.11",
-    "mongodb": "^3.2.7",
     "mongoose": "^5.6.0",
     "node-telegram-bot-api": "^0.30.0"
   },
